# ask-your-docs

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  ask.py  config.py  main.py  plan.md  pyproject.toml
_langchain_backup/api/: document_loader.py  prompts.py  rag_service.py
_langchain_backup/scripts/: ingest.py
api/: app.py  config.py  document_loader.py  models.py  prompts.py  rag_service.py  routes.py
api/evals/: eval_dataset.json  grader.py  run_eval.py  test_eval.py
api/tests/: conftest.py  test_document_loader.py  test_rag_service.py  test_routes.py
docs/: multi-demo-system.md  production-checklist.md  rag-improvement-plan.md
frontend/: index.html  package-lock.json  package.json  vercel.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ChatInterface.tsx  DocumentSidebar.tsx  DocumentViewer.tsx  ExampleChips.tsx  Footer.tsx  MessageBubble.tsx  SourcePanel.tsx
frontend/src/constants/: styles.ts  time.ts
frontend/src/contexts/: DemoContext.tsx
frontend/src/hooks/: useChatHistory.ts
frontend/src/types/: index.ts
resources/acme-corp/: demo.json  employee-handbook.md  engineering-runbook.md  onboarding-guide.md  product-docs.md  security-policy.md
resources/tpa-global/: demo.json  romania-transfer-pricing.md
scripts/: ingest.py
tests/: conftest.py  test_main.py
