[project]
name = "service-gest-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hf-xet>=1.2.0",
    "langchain-huggingface>=1.1.0",
    "langchain-ollama>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "pytest>=9.0.1",
]

[dependency-groups]
dev = [
    "chromadb>=1.3.5",
    "faiss-cpu>=1.13.0",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "mypy>=1.18.2",
    "pypdf>=6.4.0",
    "ruff>=0.14.6",
    "sentence-transformers>=5.1.2",
]
