[project]
name = "service-gest-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-ollama>=1.0.0",
    "langchain-text-splitters>=1.0.0",
    "pytest>=9.0.1",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "langchain-google-genai>=2.1.0",
    "langchain-pinecone>=0.2.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "chromadb>=1.3.5",
    "faiss-cpu>=1.13.0",
    "httpx>=0.28.0",
    "langchain>=1.1.0",
    "langchain-community>=0.4.1",
    "mypy>=1.18.2",
    "pypdf>=6.4.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.6",
    "sentence-transformers>=5.1.2",
    "anthropic>=0.40.0",
]

[tool.pytest.ini_options]
markers = [
    "eval: RAG evaluation tests (require live API keys)",
]
addopts = "-m 'not eval'"
